NetBSD Problem Report #50966

From www@NetBSD.org  Sun Mar 13 19:30:58 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id A81D57ABEE
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 13 Mar 2016 19:30:58 +0000 (UTC)
Message-Id: <20160313193057.9BC867ACBC@mollari.NetBSD.org>
Date: Sun, 13 Mar 2016 19:30:57 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/usr.sbin/mtrace/mtrace.c:1097: suspicious condition ? 
X-Send-Pr-Version: www-1.0

>Number:         50966
>Category:       bin
>Synopsis:       src/usr.sbin/mtrace/mtrace.c:1097: suspicious condition ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Mar 13 19:35:01 +0000 2016
>Closed-Date:    Sun Mar 13 20:18:36 +0000 2016
>Last-Modified:  Sun Mar 13 20:18:36 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160313
>Organization:
>Environment:
>Description:
Source code is

   if ((n->tr_inaddr != b->tr_inaddr) || (n->tr_inaddr != b->tr_inaddr))
      return 1;     /* Route changed */

but

    struct tr_resp *b = basep->resps + rno;
    struct tr_resp *p = prev->resps + rno;
    struct tr_resp *n = new->resps + rno;

Suggest either remove the duplicate code, or maybe use all 
three of b, p, n.

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50966 CVS commit: src/usr.sbin/mtrace
Date: Sun, 13 Mar 2016 15:47:59 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Sun Mar 13 19:47:59 UTC 2016

 Modified Files:
 	src/usr.sbin/mtrace: mtrace.c

 Log Message:
 PR/50966: David Binderman: Use all 3 of b, p, n to determine if route changed


 To generate a diff of this commit:
 cvs rdiff -u -r1.40 -r1.41 src/usr.sbin/mtrace/mtrace.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Sun, 13 Mar 2016 20:18:36 +0000
State-Changed-Why:
Fixed by christos, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.