PR/50966: David Binderman: Use all 3 of b, p, n to determine if route changed